tests/error/poly_errors/type_param_not_value.err
Error: Expected a value (at $FILE:12:8)
   | 
10 | @guppy(module)
11 | def foo(x: T) -> None:
12 |     y = T
   |         ^ Expected a value, got type `T`

Guppy compilation failed due to 1 previous error
